FUTBOL MOVISTAR: Actualización de l&f

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -14,10 +14,10 @@
               width:100px;
               height: 100px;
               line-height: 25px;
-              background-color: rgb(122,184,0)  !important;
+              background: #79b700  !important;
               border-radius: 50%;
               text-align:center;
-              color:   rgb(0,40,120);
+              color:   #ffffff;
               font-size:1.8em;
               margin: 0 auto  !important;
               border-style: solid;
