--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/dashboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/dashboard.html
@@ -20,7 +20,7 @@
                 width:100px;
                 height: 100px;
                 line-height: 25px;
-                background-color: rgb(122,184,0)  !important;
+                background-color: #005b83  !important;
                 background-image: url('../img/grass.jpg') !important;
                  background-attachment: fixed;
                 background-position: center;
