--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -23,7 +23,7 @@
 
 
                     <div class="row " style="margin: 0 !important;">
-                      <div class="col-xs-12 h-header red" style="text-align:right;" ng-hide="$index===0">
+                      <div class="col-xs-12 h-header yellow" style="text-align:right;" ng-hide="$index===0">
 
                         <span class="badge disabled"
                               ng-class="{'disabled': isActive('competition{{$index}}')}"
@@ -51,9 +51,9 @@
                               <table class="table h-table">
                                   <thead>
                                   <tr>
-                                    <th class="h-header yellow" style="width:20%"  >##</th>
-                                    <th class="h-header yellow left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
-                                    <th class="h-header yellow" style="width:20%" translate>LEADERBOARD.POINTS</th>
+                                    <th class="h-header light-blue" style="width:20%"  >##</th>
+                                    <th class="h-header light-blue left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
+                                    <th class="h-header light-blue" style="width:20%" translate>LEADERBOARD.POINTS</th>
                                   </tr>
                                 </thead>
                                 <tbody >
