--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -14,7 +14,7 @@
               width:100px;
               height: 100px;
               line-height: 25px;
-              background-color: rgb(122,184,0)  !important;
+              background-color: #61bb45 !important;
               border-radius: 50%;
               text-align:center;
               color:   rgb(0,40,120);
