FUTBOL: Actualizaciones varias del l&f

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -41,7 +41,7 @@
   <div class="scroller">
     <div class="container"  ng-show="hasCompetition">
 
-      <div class="row h-header yellow"  >
+      <div class="row h-header blue"  >
         <div class="col-xs-6" style="text-align:left;">
           <span style="margin-left: 5px;" translate>LEADERBOARD.TOURNAMENT</span>
         </div>
@@ -80,7 +80,7 @@
       <li ng-style="getWidth()" ng-repeat="league in leagues track by league.id_competitions"  >
         <div class="container">
 
-          <div class="row h-header green">
+          <div class="row h-header gray">
             <div class="col-xs-2" ng-click="prevPage($index)">
               <span class="mdi-navigation-arrow-back" ng-hide="leagues[$index-1].name === undefined"></span>
             </div>
@@ -93,7 +93,7 @@
             </div>
           </div>
 
-          <div class="row h-header red">
+          <div class="row h-header middle-blue">
             <div ng-show="league.bet" class="col-xs-12 text-center"
                  ng-click="saveBet($index, league.id_competitions)">
 
@@ -177,7 +177,7 @@
                   </div>
                 </div>
 
-                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt #008ec5;">
                     <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                       {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                     </div>
