--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -4,7 +4,7 @@
             <li ng-style="getWidth()" ng-repeat="page in pages track by page.id" >
                 <div class="container">
 
-                    <div class="row h-header green">
+                    <div class="row h-header gray">
                         <div class="col-xs-4 text-left" ng-click="prevPage()">
                             <span ng-bind="pages[$index-1].name" ></span>
                         </div>
@@ -80,7 +80,7 @@
                                   </div>
 
 
-                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt #008ec5;">
                                     <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                                       {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                                     </div>
