--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -38,15 +38,15 @@
             <div class="row" >
               <div class="col-xs-12" >
                 <table class="table h-table">
-                  <thead>
+                  <thead class="h-header blue">
                   <tr >
-                    <th class="h-header yellow" style="text-align:left; width:60%;">
+                    <th  style="text-align:left; width:60%;">
                       <span translate>LEADERBOARD.TOURNAMENT</span>
                     </th >
-                    <th class="h-header yellow" style="width:20%;">
+                    <th style="width:20%;">
                       <span translate>LEADERBOARD.HITS</span>
                     </th>
-                    <th class="h-header yellow" style="width:20%;">
+                    <th style="width:20%;">
                       <span translate>LEADERBOARD.POINTS</span>
                     </th>
                   </tr>
