--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -5,7 +5,7 @@ row:not(input):not(textarea) {
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html { -ms-touch-action: none; font-family: Helvetica; }
-body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#002878; background:#ffffff !important; font-size: 62.5% important;}
+body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#00589a; background:#ffffff !important; font-size: 62.5% important;}
 
 
 .footer-section{color: #FFFFFF !important; text-decoration: none  !important; }
@@ -43,26 +43,22 @@ body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; 
 header, footer {
     position: absolute;
     z-index: 100;
+    color:#FFFFFF;
     left:0;
     right:0;
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background: rgb(0,40,120);
     padding: 0 !important;
     margin:0 !important;
     border: 0;
+    background: #00589a;
 }
 
-header {
-    background: rgb(44,156,211);
-}
 
 footer {
     line-height: 25px;
-    color:#002878;
     bottom: 0;
-    background: rgb(0,40,120);
     z-index: 10;
 }
 
@@ -89,12 +85,12 @@ footer .glyphicon-class {
 }
 
 footer .option.active {
-    background-color: rgb(254,209,0);
+    background-color: #ff6322;
 }
 
-footer .option.active span {
-  color:#002878 !important;
-}
+/*footer .option.active span {
+  color:#ff6322 !important;
+}*/
 
 header .section {
     text-shadow: -1px 1px 1px rgba(0,0,0,0.5);
@@ -382,7 +378,7 @@ div.header .right {
 }
 
 body.content-mtm .row-back {
-    background-color: rgb(227,114,34);
+    background-color: #ff6322;
     color: #ffffff !important;
 }
 
@@ -404,7 +400,7 @@ body.content-mtm .row-back {
     padding: 0 !important;
     margin:0 !important;
     border: 0;
-    color: rgb(0,40,120);
+    color: #00589a;
 }
 .row-scoreboard figure {
   margin-top : 10px;
@@ -468,11 +464,11 @@ body.content-mtm .row-back {
 .content-menu,
 .content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#134985; margin-left: 32px;}
 .content-menu div.col-xs-8,
-.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #ffca00; padding-left:0 !important;}
+.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #008ec5; padding-left:0 !important;}
 .content-menu span:last-child {text-transform:uppercase;}
 
 .content-sub-menu div.col-xs-8 {
-  border-bottom: solid 1pt #134985;
+  border-bottom: solid 1pt #008ec5;
   padding-left:0 !important;
 }
 
@@ -493,7 +489,7 @@ body.content-mtm .row-back {
 }
 
 .btn-delete-item {
-    background-color: #f44336 !important;
+    background-color: #ff6322 !important;
     border-radius: 100%;
     padding: 6px;
     width: 24px;
@@ -551,7 +547,7 @@ body.content-mtm .row-back {
 }
 
 .btn-orange {
-    background-color: rgb(44,156,211) !important;
+    background-color: #008ec5 !important;
     color: #FFF !important;
 }
 
@@ -721,7 +717,7 @@ body.content-mtm .row-back {
 
 
   .row-header-live {
-      background-color: rgb(227,114,34);
+      background-color: #ff6322;
   }
 
   .row-header .title {
@@ -764,7 +760,7 @@ body.content-mtm .row-back {
     display: none !important;
 }
 .client {
-  color:#ff5722 !important;
+  color:#ff6322 !important;
   font-weight: bold;
 }
 
@@ -798,21 +794,34 @@ h6.team-name {
 
     .h-header.yellow {
       background: rgb(254,209,0);
-      color: rgb(0,40,120);
+      color: #00589a;
+    }
+
+    .h-header.gray {
+      background: #939ea4;
+      color: #ffffff;
     }
 
     .h-header.blue {
-      background: rgb(0,40,120);
+      background: #00589a;
+      color: #ffffff;
+    }
+
+    .h-header.middle-blue {
+      background: #00a9f3;
       color: #ffffff;
     }
 
     .h-header.light-blue {
-      background: rgb(44,156,211);
-      color: #ffffff;
+      background: #e3f1f6;
+      color: #00589a;
     }
 
-    .h-header.red {
-      background: rgb(227,114,34);
+
+
+
+    .h-header.orange {
+      background: #ff6322;
       color: #ffffff;
     }
 
@@ -830,7 +839,7 @@ h6.team-name {
       text-align: left;
       min-height:50px;
       line-height: 50px;
-      border-bottom: solid 1pt rgb(254,209,0);
+      border-bottom: solid 1pt #008ec5;
       /*font-weight:bold;*/
     }
 
@@ -851,7 +860,7 @@ h6.team-name {
     .content-news .h-moment {
       font-size:1.2em;
       /*font-weight:bold;*/
-      color: rgb(44,156,211);
+      color: #008ec5;
     }
 
     .content-news .h-body {
@@ -910,14 +919,14 @@ h6.team-name {
     }
 
     .content-prediction .wrapper { top: 70px; }
-    tr.h-match { border-bottom: 1.5px rgb(44,156,211) solid !important; }
+    tr.h-match { border-bottom: 1.5px #008ec5 solid !important; }
     tr.h-match:last-child { border: 0 !important; }
     tr.h-match td { height: auto;} /*vertical-align:middle;*/
     tr.h-match td .h-name-team {display:block; height: auto; }
     tr.h-match td .h-goal-team {height: auto;}
 
-    tr.h-points { border-bottom: 1pt rgb(44,156,211) solid !important; }
-    tr.h-points:last-child { border: 0 !important; color: rgb(227,114,34);}
+    tr.h-points { border-bottom: 1pt #008ec5 solid !important; }
+    tr.h-points:last-child { border: 0 !important; color: #ff6322;}
 
     .content-mtm #wrapper2 {
       top: 185px;
@@ -973,12 +982,12 @@ h6.team-name {
     .panel-primary  > .panel-heading,
     .panel-success  > .panel-heading,
     .panel-info > .panel-heading {
-      background  : rgb(44,156,211);
+      background  : #00a9f3;
     }
 
     .btn-primary:not(.btn-link):not(.btn-flat),
     .btn-success:not(.btn-link):not(.btn-flat) {
-      background  : rgb(44,156,211);
+      background  : #008ec5;
     }
 
     .btn-facebook {
@@ -994,7 +1003,7 @@ h6.team-name {
     }
 
     .btn-facebook.btn-success {
-       background  : rgb(227,114,34) !important;
+       background  : #ff6322 !important;
     }
 
     .h-ellipsis {
@@ -1034,26 +1043,19 @@ h6.team-name {
       height: auto;
     }
 
-  .status._1 { color: rgb(227,114,34); }     /*Played*/
-  .status._2 { color: rgb(122,184,0);  }     /*Playing*/
-  .status._3 { color: rgb(0,40,120); }       /*Fixture*/
-  .status._4 { color: rgb(227,114,34);  }    /*Cancelled*/
-  .status._5 { color: rgb(254,209,0);  }     /*Postponed*/
-  .status._6 { color: rgb(254,209,0);  }     /*Suspended*/
+  .status._1 { color: #ff6322; }     /*Played*/
+  .status._2 { color: rgb(179,177,179);  }     /*Playing*/
+  .status._3 { color: #00589a; }       /*Fixture*/
+  .status._4 { color: #ff6322;  }    /*Cancelled*/
+  .status._5 { color: rgb(0,88,154);  }     /*Postponed*/
+  .status._6 { color: rgb(0,88,154);  }     /*Suspended*/
 
-
-  .status.period { background: rgb(0,40,120);
-                         color: #ffffff;}
-
-  .status.period._9 {background: rgb(122,184,0);
-                          color: #ffffff; }
-
-  .status.period._8 {   background: rgb(254,209,0);
-                           color: rgb(0,40,120); }
-
+  .status.period {background: #00589a; color: #ffffff;}
+  .status.period._9 {background: rgb(179,177,179); color: #ffffff;}
+  .status.period._8 {background: rgb(0,88,154); color: #ffffff;}
 
     .h-event{
-      border-bottom: solid 1pt  rgb(44,156,211) !important;
+      border-bottom: solid 1pt  #008ec5 !important;
     }
 
     .h-event:last-child {
@@ -1088,14 +1090,14 @@ h6.team-name {
     .content-news #wrapper2 *[class *= 'mdi-']{
       font-size:1.2em;
       font-weight:bold;
-      color: rgb(44,156,211);
+      color: #008ec5;
     }
 
     .content-menu *[class *= 'mdi-'],
     .content-menu *[class *= 'icon-'] {
       font-size:2em;
       vertical-align: middle;
-      color:  rgb(0,40,120);
+      color:  #00589a;
     }
 
     .content-menu *[class *= 'icon-'] {
@@ -1235,7 +1237,7 @@ h6.team-name {
     }
 
     .badge {
-      background: rgb(44,156,211);
+      background: #008ec5;
       padding: 5px 15px;
       font-size:
       1em;
@@ -1243,7 +1245,7 @@ h6.team-name {
     }
 
     .badge.disabled {
-       background: rgb(44,156,211);
+       background: #008ec5;
        color: #ffffff;
         opacity: 0.7;
         filter: alpha(opacity=70);
@@ -1266,7 +1268,7 @@ h6.team-name {
     border-radius: 50%;
     display: inline-block;
     background: rgb(254,209,0);
-    color: rgb(0,40,120);
+    color: #00589a;
     width:100px;
     height: 100px;
     position: relative;
@@ -1295,7 +1297,7 @@ h6.team-name {
 
 
   .list-group-item-heading {
-    color:  rgb(0,40,120) !important;
+    color:  #00589a !important;
   }
 
   .btn {
