FÚTBOL - WAP: Se actualiza el lenguaje

--- a/FutbolBrasil/web/app/views/wap/xhtml.scala.html
+++ b/FutbolBrasil/web/app/views/wap/xhtml.scala.html
@@ -1,9 +1,9 @@
 @(HD: models.wap.HandsetDetection)(content: Html)
 @import play.i18n._
 <!DOCTYPE html
-        PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN"
+        PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//PT"
         "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt" lang="pt">
 <head>
     <title>@Messages.get("APP_TITLE")</title>
 </head>
