--- a/FutbolBrasil/web/app/views/wap/html4.scala.html
+++ b/FutbolBrasil/web/app/views/wap/html4.scala.html
@@ -1,7 +1,7 @@
 @(bMenu: Boolean, sRoute: String, HD: models.wap.HandsetDetection)(content: Html)
 
 @import play.i18n._
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//PT"
         "http://www.w3.org/TR/html4/loose.dtd">
 @menu(sRoute: String) = {
     <div class="row">
@@ -20,7 +20,7 @@
     </div>
 }
 
-<html>
+<html lang="pt">
     <head>
         <title>@Messages.get("APP_TITLE")</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
