--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -1012,7 +1012,8 @@ h6.team-name {
     }
 
 
-    #screen-block {
+    #screen-block,
+    #screen-block-landscape {
       position: absolute;
       top: 0;
       left: 0;
@@ -1021,6 +1022,10 @@ h6.team-name {
       height: 100%;
       background-color: rgba(0,0,0,0.7);
       text-align:center;
+     }
+
+     #screen-block-landscape {
+        z-index: 100 !important;
      }
 
     .h-center {
@@ -1303,36 +1308,6 @@ h6.team-name {
   }
 
 
-
-      @media only screen and (min-width: 320px) and (max-width: 800px) {
-            .content-dashboard {
-                background: rgb(122,184,0); !important;
-                background-image: url('../img/grama-480x800.jpg') !important;
-                background-size: auto;
-            }
-
-      }
-
-			@media only screen and (min-width: 800px) and (max-width: 1280px) {
-			    .content-dashboard {
-               background:  background: rgb(122,184,0); !important;
-               background-image: url('../img/grama-720x1280.jpg') !important;
-               background-size: auto;
-           }
-			}
-
-			@media only screen and (min-width:1280px) {
-			    .content-dashboard {
-               background:  background: rgb(122,184,0); !important;
-               background-image: url('../img/grama-1080x1920.jpg') !important;
-               background-size: cover;
-           }
-			}
-
-
-
-
-
   .content-dashboard #wrapper {
       top: 225px;
       color: #ffffff !important;
@@ -1366,4 +1341,18 @@ h6.team-name {
     top: -30px;
   }
 
+  /** (landscape) **/
+  @media only screen and (orientation : portrait) {
+    #screen-block-landscape {
+      display:block;
+    }
+  }
+
+  @media only screen and (orientation : landscape) {
+    #screen-block-landscape {
+      display:none;
+    }
+  }
   /*</v2>*/
+
+
