FUTBOL: Fixed caracteres especiales mal formados

--- a/FutbolBrasil/web/app/views/wap/html4.scala.html
+++ b/FutbolBrasil/web/app/views/wap/html4.scala.html
@@ -20,9 +20,10 @@
     </div>
 }
 
-<html lang="pt">
+<html>
     <head>
         <title>@Messages.get("APP_TITLE")</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.at("stylesheets/wap/main.css")'>
         <link rel="stylesheet" type="text/css" href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
