--- a/FutbolBrasil/web/app/views/wap/xhtml.scala.html
+++ b/FutbolBrasil/web/app/views/wap/xhtml.scala.html
@@ -3,9 +3,10 @@
 <!DOCTYPE html
         PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//PT"
         "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt" lang="pt">
+<html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <title>@Messages.get("APP_TITLE")</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
     <body style="margin:0; padding:0;" >
         <div style='width:@{HD.getBanner().get("width").asText()}px; height:auto;'>
