--- a/FutbolBrasil/futbol-brasil/app/styles/media-orientation.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/media-orientation.css
@@ -1,12 +1,12 @@
  /** (landscape) **/
-  @media only screen and (orientation : landscape) {
+  @media all and (orientation : landscape) {
     #screen-block-landscape {
       display:block;
     }
   }
 
   /** (portrait) **/
-  @media only screen and (orientation : portrait) {
+  @media all and  (orientation : portrait) {
     #screen-block-landscape {
       display:none;
     }
