--- a/FutbolBrasil/futbol-brasil/app/styles/media-orientation.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/media-orientation.css
@@ -1,14 +1,14 @@
  /** (landscape) **/
-  @media all and (orientation : landscape) {
+  /*@media all and (orientation : landscape) {
     #screen-block-landscape {
       display:block;
     }
-  }
+  }*/
 
   /** (portrait) **/
-  @media all and  (orientation : portrait) {
+ /* @media all and  (orientation : portrait) {
     #screen-block-landscape {
       display:none;
     }
-  }
+  }*/
 
