FÚTBOL: Se actualiza recursos y l&f con los colores de Kolbi

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -51,9 +51,9 @@
                               <table class="table h-table">
                                   <thead>
                                   <tr>
-                                    <th class="h-header yellow" style="width:20%"  >##</th>
-                                    <th class="h-header yellow left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
-                                    <th class="h-header yellow" style="width:20%" translate>LEADERBOARD.POINTS</th>
+                                    <th class="h-header light-orange" style="width:20%"  >##</th>
+                                    <th class="h-header light-orange left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
+                                    <th class="h-header light-orange" style="width:20%" translate>LEADERBOARD.POINTS</th>
                                   </tr>
                                 </thead>
                                 <tbody >
