--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -90,7 +90,7 @@
                     <table class="table">
                       <thead>
                       <tr>
-                        <th colspan="8" class="h-header light-blue">
+                        <th colspan="8" class="h-header light-orange">
                           <span>{{fromNow(ranking.date)}}</span>
                         </th>
                       </tr>
@@ -131,7 +131,7 @@
                 </div>
 
 
-                <div class="row h-source" style="border-top: solid 1pt rgb(254,209,0);">
+                <div class="row h-source" style="border-top: solid 1pt #cecfd1;">
                   <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                     {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                   </div>
@@ -218,7 +218,7 @@
                 </div>
 
 
-                <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt #cecfd1;">
                   <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                     {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                   </div>
