--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -14,10 +14,10 @@
               width:100px;
               height: 100px;
               line-height: 25px;
-              background-color: rgb(122,184,0)  !important;
+              background-color: #bdd631  !important;
               border-radius: 50%;
               text-align:center;
-              color:   rgb(0,40,120);
+              color: #919191;
               font-size:1.8em;
               margin: 0 auto  !important;
               border-style: solid;
@@ -40,13 +40,13 @@
                 <table class="table h-table">
                   <thead>
                   <tr >
-                    <th class="h-header yellow" style="text-align:left; width:60%;">
+                    <th class="h-header light-orange" style="text-align:left; width:60%;">
                       <span translate>LEADERBOARD.TOURNAMENT</span>
                     </th >
-                    <th class="h-header yellow" style="width:20%;">
+                    <th class="h-header light-orange" style="width:20%;">
                       <span translate>LEADERBOARD.HITS</span>
                     </th>
-                    <th class="h-header yellow" style="width:20%;">
+                    <th class="h-header light-orange" style="width:20%;">
                       <span translate>LEADERBOARD.POINTS</span>
                     </th>
                   </tr>
