--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -26,9 +26,9 @@
                                         <table  ng-show="league.scorers" class="table h-table">
                                             <thead>
                                             <tr>
-                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
-                                                <th class="h-header yellow" translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
-                                                <th class="h-header yellow" translate>SCORERS.GOALS_LABEL</th>
+                                                <th class="h-header light-orange" translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
+                                                <th class="h-header light-orange" translate style="text-align: left;">SCORERS.TEAM_LABEL</th>
+                                                <th class="h-header light-orange" translate>SCORERS.GOALS_LABEL</th>
                                             </tr>
                                             </thead>
                                             <tbody>
@@ -56,7 +56,7 @@
 
                                   </div>
 
-                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt rgb(254,209,0);">
+                                  <div class="row h-source" ng-show="showSource" style="border-top: solid 1pt #cecfd1;">
                                     <div class="col-xs-12" style="padding: 15px  !important; text-align:left; ">
                                       {{'NEWS.SOURCE' | translate}} <span>: Perform Group</span>
                                     </div>
