--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -5,7 +5,7 @@ row:not(input):not(textarea) {
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html { -ms-touch-action: none; font-family: Helvetica; }
-body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#002878; background:#ffffff !important; font-size: 62.5% important;}
+body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; width: 100%; height: 100%; color:#919191; background:#ffffff !important; font-size: 62.5% important;}
 
 
 .footer-section{color: #FFFFFF !important; text-decoration: none  !important; }
@@ -48,21 +48,20 @@ header, footer {
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background: rgb(0,40,120);
     padding: 0 !important;
     margin:0 !important;
     border: 0;
 }
 
 header {
-    background: rgb(44,156,211);
+  background: #00948e; /*Green Kolbi*/
 }
 
 footer {
     line-height: 25px;
-    color:#002878;
+    color:#919191;
     bottom: 0;
-    background: rgb(0,40,120);
+    background: #00948e;
     z-index: 10;
 }
 
@@ -89,11 +88,11 @@ footer .glyphicon-class {
 }
 
 footer .option.active {
-    background-color: rgb(254,209,0);
+    background-color: #bdd631;
 }
 
 footer .option.active span {
-  color:#002878 !important;
+  color:#00948e !important;
 }
 
 header .section {
@@ -134,14 +133,14 @@ table tr th {
 }
 
 table tbody tr td.active {
-  background: #fed100 !important;
-  color: #002878 !important;
+  background: #bdd631 !important;
+  color: #919191 !important;
 }
 
 table tbody tr td span.active,
 table tbody tr td img.active{
   background: rgb(254,209,0) !important;
-  color: #002878 !important;
+  color: #919191 !important;
 }
 
 
@@ -174,7 +173,7 @@ div.header {
     width: 100%;
     height: 35px;
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #bdd631;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
@@ -249,7 +248,7 @@ div.header {
     width: 100%;
     height: 35px;
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #bdd631;
     padding: 0 !important;
     margin:0 !important;
     border: 0;
@@ -404,7 +403,7 @@ body.content-mtm .row-back {
     padding: 0 !important;
     margin:0 !important;
     border: 0;
-    color: rgb(0,40,120);
+    color: #919191;
 }
 .row-scoreboard figure {
   margin-top : 10px;
@@ -466,13 +465,13 @@ body.content-mtm .row-back {
 /*menu*/
 
 .content-menu,
-.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#134985; margin-left: 32px;}
+.content-sub-menu {background:#ffffff; height: 50px; line-height:50px; color:#00948e; margin-left: 32px;}
 .content-menu div.col-xs-8,
-.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #ffca00; padding-left:0 !important;}
+.content-sub-menu div.col-xs-8{border-bottom: solid 1pt #cecfd1; padding-left:0 !important;}
 .content-menu span:last-child {text-transform:uppercase;}
 
 .content-sub-menu div.col-xs-8 {
-  border-bottom: solid 1pt #134985;
+  border-bottom: solid 1pt #00948e;
   padding-left:0 !important;
 }
 
@@ -551,7 +550,7 @@ body.content-mtm .row-back {
 }
 
 .btn-orange {
-    background-color: rgb(44,156,211) !important;
+    background-color: #00948e !important;
     color: #FFF !important;
 }
 
@@ -567,7 +566,7 @@ body.content-mtm .row-back {
 
 .section-header {
     line-height: 35px;
-    background-color: rgb(122,184,0);
+    background-color: #bdd631;
     color: #FFF;
 }
 
@@ -640,11 +639,11 @@ body.content-mtm .row-back {
     width: 100%;
     height: 40px;
     line-height: 35px;
-    background-color: #fed100;
+    background-color: #bdd631;
     padding: 0 !important;
     margin: 0 !important;
     border: 0;
-    color: #002878 !important;
+    color: #919191 !important;
     font-weight: bold;
 }
 
@@ -792,27 +791,37 @@ h6.team-name {
     }
 
     .h-header.green {
-      background: rgb(122,184,0);
+      background: #bdd631;
+      color: #ffffff;
+    }
+
+    .h-header.orange {
+      background: #ff6c33;
+      color: #ffffff;
+    }
+
+    .h-header.light-orange {
+      background: #ff8c39;
       color: #ffffff;
     }
 
     .h-header.yellow {
       background: rgb(254,209,0);
-      color: rgb(0,40,120);
+      color: #919191;
     }
 
     .h-header.blue {
-      background: rgb(0,40,120);
+      background: #919191;
       color: #ffffff;
     }
 
     .h-header.light-blue {
-      background: rgb(44,156,211);
+      background: #00948e;
       color: #ffffff;
     }
 
     .h-header.red {
-      background: rgb(227,114,34);
+      background: #e6205a;
       color: #ffffff;
     }
 
@@ -830,7 +839,7 @@ h6.team-name {
       text-align: left;
       min-height:50px;
       line-height: 50px;
-      border-bottom: solid 1pt rgb(254,209,0);
+      border-bottom: solid 1pt #cecfd1;
       /*font-weight:bold;*/
     }
 
@@ -851,7 +860,7 @@ h6.team-name {
     .content-news .h-moment {
       font-size:1.2em;
       /*font-weight:bold;*/
-      color: rgb(44,156,211);
+      color: #00948e;
     }
 
     .content-news .h-body {
@@ -910,13 +919,13 @@ h6.team-name {
     }
 
     .content-prediction .wrapper { top: 70px; }
-    tr.h-match { border-bottom: 1.5px rgb(44,156,211) solid !important; }
+    tr.h-match { border-bottom: 1.5px #cecfd1 solid !important; }
     tr.h-match:last-child { border: 0 !important; }
     tr.h-match td { height: auto;} /*vertical-align:middle;*/
     tr.h-match td .h-name-team {display:block; height: auto; }
     tr.h-match td .h-goal-team {height: auto;}
 
-    tr.h-points { border-bottom: 1pt rgb(44,156,211) solid !important; }
+    tr.h-points { border-bottom: 1pt #cecfd1 solid !important; }
     tr.h-points:last-child { border: 0 !important; color: rgb(227,114,34);}
 
     .content-mtm #wrapper2 {
@@ -973,12 +982,12 @@ h6.team-name {
     .panel-primary  > .panel-heading,
     .panel-success  > .panel-heading,
     .panel-info > .panel-heading {
-      background  : rgb(44,156,211);
+      background  : #00948e;
     }
 
     .btn-primary:not(.btn-link):not(.btn-flat),
     .btn-success:not(.btn-link):not(.btn-flat) {
-      background  : rgb(44,156,211);
+      background  : #00948e;
     }
 
     .btn-facebook {
@@ -1039,32 +1048,21 @@ h6.team-name {
       height: auto;
     }
 
-  .status._1 { color: rgb(227,114,34); }     /*Played*/
-  .status._2 { color: rgb(122,184,0);  }     /*Playing*/
-  .status._3 { color: rgb(0,40,120); }       /*Fixture*/
-  .status._4 { color: rgb(227,114,34);  }    /*Cancelled*/
-  .status._5 { color: rgb(254,209,0);  }     /*Postponed*/
-  .status._6 { color: rgb(254,209,0);  }     /*Suspended*/
+
+  .status._1 { color: rgb(255,108,51); } /*Played*/
+  .status._2 { color: #bdd631;  } /*Playing*/
+  .status._3 { color: #919191; } /*Fixture*/
+  .status._4 { color: rgb(255,108,51);  } /*Cancelled*/
+  .status._5 { color: rgb(255,140,57);  } /*Postponed*/
+  .status._6 { color: rgb(255,140,57);  } /*Suspended*/
+
+  .status.period {background: #919191; color: #ffffff;}
+  .status.period._9 {background: #bdd631; color: #ffffff; }
+  .status.period._8 {background: #ff8c39; color: #ffffff; }
 
 
-  .status.period { background: rgb(0,40,120);
-                         color: #ffffff;}
-
-  .status.period._9 {background: rgb(122,184,0);
-                          color: #ffffff; }
-
-  .status.period._8 {   background: rgb(254,209,0);
-                           color: rgb(0,40,120); }
-
-
-    .h-event{
-      border-bottom: solid 1pt  rgb(44,156,211) !important;
-    }
-
-    .h-event:last-child {
-          border-bottom: 0 !important;
-    }
-
+  .h-event{border-bottom: solid 1pt  #cecfd1 !important;}
+  .h-event:last-child {border-bottom: 0 !important;}
 
     header .h-title {
       font-size: 2em !important;
@@ -1093,14 +1091,14 @@ h6.team-name {
     .content-news #wrapper2 *[class *= 'mdi-']{
       font-size:1.2em;
       font-weight:bold;
-      color: rgb(44,156,211);
+      color: #00948e;
     }
 
     .content-menu *[class *= 'mdi-'],
     .content-menu *[class *= 'icon-'] {
       font-size:2em;
       vertical-align: middle;
-      color:  rgb(0,40,120);
+      color:  #919191;
     }
 
     .content-menu *[class *= 'icon-'] {
@@ -1240,7 +1238,7 @@ h6.team-name {
     }
 
     .badge {
-      background: rgb(44,156,211);
+      background: #00948e;
       padding: 5px 15px;
       font-size:
       1em;
@@ -1248,7 +1246,7 @@ h6.team-name {
     }
 
     .badge.disabled {
-       background: rgb(44,156,211);
+       background: #00948e;
        color: #ffffff;
         opacity: 0.7;
         filter: alpha(opacity=70);
@@ -1271,7 +1269,7 @@ h6.team-name {
     border-radius: 50%;
     display: inline-block;
     background: rgb(254,209,0);
-    color: rgb(0,40,120);
+    color: #919191;
     width:100px;
     height: 100px;
     position: relative;
@@ -1300,7 +1298,7 @@ h6.team-name {
 
 
   .list-group-item-heading {
-    color:  rgb(0,40,120) !important;
+    color:  #919191 !important;
   }
 
   .btn {
@@ -1331,7 +1329,7 @@ h6.team-name {
    }
 
   .h-points  {
-    background: rgb(122,184,0) !important;
+    background: #bdd631 !important;
     height: 225px;
   }
   .content-dashboard  tr.h-match {border-bottom: 1.5px #ffffff solid !important;}
