--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
@@ -26,12 +26,12 @@
 
 </div>
 
-<div style="position:absolute; bottom:50%; left: 0; z-index: 25;" ng-class="getHiddenClass(0)" >
-  <i class=" mdi-navigation-chevron-left" ng-click="prevPage()"></i>
+<div style="position:absolute; display:block; bottom:50%; left: 0; z-index: 25;" ng-class="getHiddenClass(0)" >
+  <buttom class=" mdi-navigation-chevron-left" ng-click="prevPage()"></buttom>
 </div>
 
-<div style="position:absolute; bottom:50%; right:0; z-index: 25; "  ng-class="getHiddenClass(3)"  >
-  <i class="mdi-navigation-chevron-right" ng-click="nextPage()"></i>
+<div style="position:absolute; display:block; bottom:50%; right:0; z-index: 25; "  ng-class="getHiddenClass(3)"  >
+  <buttom class="mdi-navigation-chevron-right" ng-click="nextPage()"></buttom>
 </div>
 
 <div style="position:absolute; bottom:10px; right:10px; z-index: 25;  text-align:right; ">
