FOOTBALL_MANAGER: vista de instances y job, config de jobcore

--- a/FutbolBrasil/FootballManager/app/views/configs/edit.scala.html
+++ b/FutbolBrasil/FootballManager/app/views/configs/edit.scala.html
@@ -22,7 +22,7 @@
             <legend>@Messages("configs.info")</legend>
 
             @inputText(
-                configViewForm("keyName"),
+                configViewForm("configKey"),
                 '_label -> Messages("configs.key"),
                 '_help -> Messages("configs.key.help"),
                 'class -> "form-control",
