--- a/FutbolBrasil/FootballManager/app/views/configs/list.scala.html
+++ b/FutbolBrasil/FootballManager/app/views/configs/list.scala.html
@@ -99,7 +99,7 @@
                                 <tr>
                                     <td>
                                         <a href="@controllers.routes.ConfigsView.edit(config.getIdConfig())">
-                                            @Html(config.getKeyName())
+                                            @Html(config.getConfigKey())
                                         </a>
                                     </td>
                                     <td>@Html(config.getValue())</td>
