--- a/FutbolBrasil/FootballManager/app/views/main.scala.html
+++ b/FutbolBrasil/FootballManager/app/views/main.scala.html
@@ -43,6 +43,11 @@
                                         <li class="dropdown">
                                             <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.admin")<b class="caret"></b></a>
                                             <ul class="dropdown-menu">
+                                                <li class="dropdown-header">@Messages("main.servers")</li>
+                                                <li><a href="@controllers.routes.InstancesView.list()">@Messages("main.instances")</a></li>
+                                                <li><a href="@controllers.routes.JobsView.list()">@Messages("main.jobs")</a></li>
+                                                <li class="divider"></li>
+                                                <li class="dropdown-header">@Messages("main.basic")</li>
                                                 <li><a href="@controllers.routes.ConfigsView.list()">@Messages("main.configurations")</a></li>
                                                 <li><a href="@controllers.routes.UsersView.list()">@Messages("main.users")</a></li>
                                             </ul>
