FOOTBALL_BRAZIL: vistas de jobs, configs, instancias y usuarios

--- a/FutbolBrasil/web/app/views/index.scala.html
+++ b/FutbolBrasil/web/app/views/index.scala.html
@@ -1,1 +1,15 @@
-@(currentPage: com.avaje.ebean.Page[models.news.News], currentSortBy: String, currentOrder: String, currentFilter: String)
+@(message: String)
+
+@main("Football Brazil") {
+
+    <div class="bs-docs-section">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Football Brazil</h2>
+            </div>
+        </div>
+
+    </div>
+
+}
