--- a/FutbolBrasil/web/app/views/_emailPartial.scala.html
+++ b/FutbolBrasil/web/app/views/_emailPartial.scala.html
@@ -6,5 +6,6 @@
 @inputText(
   f("email"),
   '_showConstraints -> constraints,
-  '_label -> Messages("playauthenticate.login.email.placeholder")
+  '_label -> Messages("playauthenticate.login.email.placeholder"),
+  'class -> "form-control"
 )
