--- a/FutbolBrasil/web/app/views/_passwordPartial.scala.html
+++ b/FutbolBrasil/web/app/views/_passwordPartial.scala.html
@@ -5,12 +5,14 @@
 
              @inputPassword(
                 f("password"),
-                '_label -> Messages("playauthenticate.login.password.placeholder")
+                '_label -> Messages("playauthenticate.login.password.placeholder"),
+                'class -> "form-control"
              )
              
              @inputPassword(
                 f("repeatPassword"),
                 '_label -> Messages("playauthenticate.login.password.repeat"),
                 '_showConstraints -> false,
-                '_error -> f.error("password")
+                '_error -> f.error("password"),
+                'class -> "form-control"
              )
