PALPITES: Se oculta el facebook

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -137,7 +137,7 @@
                 </div>
             </div--->
 
-            <div class="panel panel-info">
+            <!--div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="mdi-social-people"></span>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div-->
         </div>
     </div>
 </div>
